Fix color contrast at home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #0563bb;
+  color: #0A76DB;
   text-decoration: none;
 }
 
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #f2f3f5;
+  background: #1864FB;
 }
 
 #preloader:before {
@@ -240,7 +240,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #45505b;
+  color: #000000;
 }
 
 .mobile-nav-active {
@@ -253,7 +253,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #0A76DB;
 }
 
 /*--------------------------------------------------------------
@@ -356,7 +356,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #45505b;
+  color: #000000;
 }
 
 .section-title h2::before {
@@ -376,7 +376,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #0A76DB;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -438,7 +438,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #0A76DB;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -479,7 +479,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #45505b;
+  color: #000000;
 }
 
 .skills .progress .skill .val {
@@ -506,13 +506,13 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #45505b;
+  color: #000000;
 }
 
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #0A76DB;
   position: relative;
 }
 
@@ -556,7 +556,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #0563bb;
+  border: 2px solid #0A76DB;
 }
 
 /*--------------------------------------------------------------
@@ -664,12 +664,12 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
-  color: #45505b;
+  color: #000000;
   font-weight: 600;
 }
 
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #45505b;
+  color: #000000;
   font-size: 14px;
   /* text-transform: uppercase; */
   padding: 0;
@@ -682,7 +682,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #45505b;
+  color: #000000;
   margin: 0 2px;
   font-size: 28px;
   display: inline-block;
@@ -736,11 +736,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #0A76DB;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #0A76DB;
 }
 
 .portfolio-details .portfolio-info {
@@ -826,7 +826,7 @@ section {
 }
 
 .services .icon-box h4 a {
-  color: #45505b;
+  color: #000000;
   transition: ease-in-out 0.3s;
 }
 
@@ -977,11 +977,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #0A76DB;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #0A76DB;
 }
 
 @media (min-width: 992px) {
@@ -1000,7 +1000,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #0A76DB;
   float: left;
   width: 44px;
   height: 44px;
@@ -1017,7 +1017,7 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #45505b;
+  color: #000000;
 }
 
 .contact .info p {
@@ -1032,7 +1032,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #0563bb;
+  background: #0A76DB;
   color: #fff;
 }
 
@@ -1102,7 +1102,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #0563bb;
+  background: #0A76DB;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1137,7 +1137,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   background: #f7f8f9;
-  color: #45505b;
+  color: #000000;
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
@@ -1166,7 +1166,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
+  background: #0A76DB;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
